------------------------------------
           VERSION 3.3.1
------------------------------------

Features & Enhancements:
* Support of query parameter and action inheritance (#75)

Bugfixes:
* Implemented equals()/hashcode() for LazyExpression (#115)
* Performance: URLPatternParser got created on every call to UrlMapping.getPatternParser()
* Fixed incorrect handling of Spring AOP proxies during bean name lookup - thanks to mbenson for the patch #(119)
* Dynaview: Parameter injection now correctly happens before view determination (#120)
* Fixed decoding of quotation mark character. Thanks to Bruno Aranda for the patch. (#122)
* Use equals() instead of matches() to compare URL with view-id. Thanks to mbenson for bringing this up.
* Prevent rewrite loops by avoiding nested rewrites for forwarded requests (#121)

------------------------------------
           VERSION 3.3.0
------------------------------------

Features & Enhancements:
* Performance improvements when running JSF 2.0 in project stage 'development'
* Regular expression performance improvements provided by Yann Simon.
* Ambiguous View IDs are now resolved automatically when using pretty:mappingIds in action method navigation, <h:link> and <h:button> component outcomes
* Ambiguous View IDs may now be resolved manually for outbound URL rewrites by adding '?com.ocpsoft.mappingId=...' to URLs before calling HttpServletResponse.encodeURL(...)
* Dynaview URLs are now resolved during rendering of links and navigation cases, and are now as functional as traditional mappings.

Bugfixes:
* Fixed bug that caused path parameter validators to be ignored (#102)
* Handle java.lang.ClassFormatError during initialization of bean name resolvers (#101)
* Also check Weld 1.1.x specific servlet context attribute while search for BeanManager
* Mapping inheritance now working correctly for mappings using the same viewId


------------------------------------
           VERSION 3.2.1
------------------------------------
